# AutoTrans

./: .gitignore  README.md
Utils/odom_visualization/: CMakeLists.txt
Utils/odom_visualization/src/: odom_visualization.cpp
Utils/quadrotor_msgs/: CMakeLists.txt
controller/payload_mpc_controller/: CMakeLists.txt  package.xml
controller/payload_mpc_controller/config/: model.yaml  mpc.yaml
controller/payload_mpc_controller/include/payload_mpc_controller/: flatness.h  force_estimator.hpp  lbfgs.hpp  lowpassfilter2p.h  mpc_controller.h  mpc_fsm.h  mpc_input.h  mpc_params.h  mpc_wrapper.h  multi_optimization_based_force_estimator.hpp  multi_optimization_based_force_estimator_min_length.hpp  optimization_based_force_estimator_lbfgs.hpp  polynomial_trajectory.h
controller/payload_mpc_controller/model/: CMakeLists.txt  Makefile  README.md  quadrotor_payload_mpc_hybird.cpp  quadrotor_payload_mpc_with_ext_force.cpp
controller/payload_mpc_controller/model/quadrotor_payload_mpc/: acado_common.h  acado_integrator.c  acado_solver.c
controller/payload_mpc_controller/src/: mpc_controller.cpp  mpc_controller_node.cpp  mpc_fsm.cpp  mpc_input.cpp  mpc_wrapper.cpp
planner/path_searching/: CMakeLists.txt
planner/path_searching/include/path_searching/: kinodynamic_astar.h
planner/path_searching/src/: kinodynamic_astar.cpp
planner/plan_env/: CMakeLists.txt
planner/plan_env/include/plan_env/: grid_map.h
planner/plan_env/src/: grid_map.cpp
planner/plan_manage/: CMakeLists.txt  package.xml
planner/plan_manage/config/: planning_params.yaml
planner/plan_manage/include/plan_manage/: planner_manager.h  planning_visualization.h  replan_fsm.h
planner/plan_manage/launch/: planning_node_params.xml  replan.launch  rviz.launch  sim_vis.rviz  simple_run.launch  simulator.xml
planner/plan_manage/src/: payload_planner_node.cpp  planner_manager.cpp  planning_visualization.cpp  replan_fsm.cpp
planner/traj_opt/: CMakeLists.txt  package.xml
planner/traj_opt/include/optimizer/: flatness.hpp  plan_container.hpp  poly_traj_optimizer.h  poly_traj_utils.hpp
planner/traj_opt/src/: poly_traj_optimizer.cpp
planner/traj_utils/: CMakeLists.txt
planner/traj_utils/src/: main.cpp
uav_simulator/local_sensing/: CMakeLists.txt
uav_simulator/map_generator/: CMakeLists.txt  payload_replan.launch
uav_simulator/map_generator/include/map_generator/: map_generator.hpp
uav_simulator/map_generator/src/: map_generator.cpp  random_forest_sensing.cpp
uav_simulator/mockamap/src/: maps.cpp
uav_simulator/so3_quadrotor/: CMakeLists.txt  package.xml
uav_simulator/so3_quadrotor/include/so3_quadrotor/: geometry_utils.hpp  quadrotor_dynamics.hpp
uav_simulator/so3_quadrotor/src/: so3_quadrotor_nodelet.cpp
uav_simulator/uav_simulator/config/: local_sensing.yaml  mockamap.yaml  rviz.rviz  so3_quadrotor.yaml
uav_simulator/uav_simulator/launch/: uav_simulator.launch
