<?xml version="1.0"?>
<package format="2">
  <name>payload_mpc_controller</name>
  <version>0.0.0</version>
  <description>Model Predictive Control for Quadrotors with Payload</description>

  <maintainer email="hlied@connect.ust.hk">Haojia Li</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mav_msgs</depend>
  <depend>autopilot</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>quadrotor_common</depend>
  <depend>sensor_msgs</depend>
  <depend>uav_utils</depend>
  <depend>mavros</depend>

  <export>
  </export>
</package>