cmake_minimum_required(VERSION 2.8.3)
project(payload_planner)

set(CMAKE_BUILD_TYPE "Release")

ADD_COMPILE_OPTIONS(-std=c++17 )
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g -march=native")

find_package(Eigen3 REQUIRED)
find_package(PCL 1.7 REQUIRED)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs
  geometry_msgs
  quadrotor_msgs
  plan_env
  path_searching
  traj_opt
  traj_utils
  message_generation
  cv_bridge
)

# catkin_package(CATKIN_DEPENDS message_runtime)
catkin_package(
 INCLUDE_DIRS include
 LIBRARIES payload_planner
 CATKIN_DEPENDS plan_env path_searching traj_opt traj_utils 
#  DEPENDS system_lib
)

include_directories(
  include
  SYSTEM
  ${catkin_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include
  ${EIGEN3_INCLUDE_DIR}
  ${PCL_INCLUDE_DIRS}
)

add_library( vis_utils
    src/planning_visualization.cpp 
    )
target_link_libraries( vis_utils
    ${catkin_LIBRARIES} 
    )  

add_executable(payload_planner_node
  src/payload_planner_node.cpp 
  src/replan_fsm.cpp
  src/planner_manager.cpp
  )
target_link_libraries(payload_planner_node 
  ${catkin_LIBRARIES}
  vis_utils
  )


